<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/opt_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/btn_dialog"
        android:title="@string/txt_logout"
        app:showAsAction="always" />
    <item
        android:id="@+id/opt_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/txt_opt_orden"
        app:showAsAction="always" />
    <item
        android:id="@+id/opt_choose_priority_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/arrow_down_float"
        android:title="@string/txt_opt_prioridad_1" />
    <item
        android:id="@+id/opt_choose_priority_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/arrow_down_float"
        android:title="@string/txt_opt_prioridad_2" />
    <item
        android:id="@+id/opt_choose_priority_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/arrow_down_float"
        android:title="@string/txt_opt_prioridad_3" />
    <item
        android:id="@+id/opt_choose_priority_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/arrow_down_float"
        android:title="@string/txt_opt_prioridad_4" />
</menu>